src/pages/HomePage/Footer/Footer.module.scss
.footer {
  width: 100%;
  border-top: 1px solid rgb(var(--white-color));
  background-color: rgb(var(--interface-color));
  padding: 3rem 0;
  margin-top: 3rem;

  .content {
    display: grid;
    grid-template-columns: 100%;
    gap: 1rem;

    @media (min-width: 768px) {
      grid-template-columns: 30% 40% 30%;
      gap: 0;
    }

    .information {
      display: flex;
      flex-direction: column;
      text-align: justify;
      justify-content: space-between;
      gap: 0.5rem;

      @media (min-width: 768px) {
        gap: 1rem;
      }
    }

    .socialLinks {
      display: flex;
      flex-direction: row;
      align-items: center;
      padding: 1rem 0;
      border-top: 1px solid white;
      border-bottom: 1px solid white;

      @media (min-width: 768px) {
        flex-direction: column;
        text-align: center;
        padding: 0;
        border: 0;
      }

      .links {
        flex: 1;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: flex-end;
        gap: 1rem;

        @media (min-width: 768px) {
          gap: 1.5rem;
        }

        .link {
          filter: grayscale(1);
          transition: transform var(--transition-duration)
            var(--transition-timing-function);
          will-change: transform;

          &:hover,
          &:focus {
            filter: none;
            transform: scale(1.05);
          }

          &:active {
            transform: scale(0.95);
          }

          .image {
            width: 2rem;
            object-fit: contain;

            @media (min-width: 768px) {
              width: 2.5rem;
            }
          }
        }
      }
    }

    .location {
      display: flex;
      flex-direction: row;
      justify-content: space-between;

      @media (min-width: 768px) {
        flex-direction: column;
        text-align: right;
      }

      .section {
        display: flex;
        flex-direction: column;
        gap: 0.5rem;

        @media (min-width: 768px) {
          gap: 1rem;
        }
      }

      .version {
        align-self: flex-end;

        @media (min-width: 768px) {
          align-self: initial;
        }
      }
    }
  }
}

